<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context="by.bsuir.wildboom.lab1.KeyboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/backgroundColor"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_num_1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num1" />

            <Button
                android:id="@+id/button_num_2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num2" />

            <Button
                android:id="@+id/button_num_3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_num_4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num4" />

            <Button
                android:id="@+id/button_num_5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num5" />

            <Button
                android:id="@+id/button_num_6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_num_7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num7" />

            <Button
                android:id="@+id/button_num_8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num8" />

            <Button
                android:id="@+id/button_num_9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/dot" />

            <Button
                android:id="@+id/button_num_0"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/num0" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>